<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/design_default_color_on_primary"
    >


    <View
        android:id="@+id/viewLogin"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:id="@+id/TextViewLogin"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewLogin"
        app:layout_constraintEnd_toEndOf="@+id/viewLogin"
        app:layout_constraintStart_toStartOf="@+id/viewLogin"
        app:layout_constraintTop_toTopOf="@+id/viewLogin"
        android:text="LOGIN"
        android:textSize="20pt"
        android:textColor="@color/white"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLogin"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="10pt"
        android:layout_marginStart="30dp"/>
    <EditText
        android:id="@+id/editUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/introduce_tu_nombre_de_usuario_o_email"
        android:textSize="10sp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.05" />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.06"
        android:textSize="10pt"
        android:layout_marginStart="30dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/introduce_tu_contraseña"
        android:textSize="10sp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        android:background="@color/design_default_color_primary_dark"
        android:textColor="@color/white"
        android:text="@string/entrar"
        app:layout_constraintVertical_bias="0.7"/>


</androidx.constraintlayout.widget.ConstraintLayout>